--- a/inputBox/popup.html
+++ b/inputBox/popup.html
@@ -1,19 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="popup.css">
-    <title>Delta Prompt</title>
-</head>
-<body>
-    <div id="inputbox">
-        <input type="text" id="myInputBox" placeholder="Type & Sync...">
-    </div>
-    <div id="button">
-        <button id="Save">Save</button>
-        <button id="Clear">Clear</button>
-    </div>
-    <script src="popup.js"></script>
-</body>
-</html>
+<html><body>
+  <p>Use <strong>Ctrl+Shift+K</strong> to toggle the prompt box</p>
+  <a href="options.html" target="_blank">Set API Key</a>
+</body></html>
